# waste2energy

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/processed/figures_tables/: paper1_planning_results_table.csv  paper1_planning_visual_annotations.csv  (+2 more)
data/raw/: README.md
results/paper/: paper1_planning_figure_manifest.json
results/plot/: paper1_planning_figure_manifest.json
scripts/: check_submission_readiness.py  run_confirmatory_audit.py  run_operation_env_baseline.py  run_operation_rl.py  run_planning_baseline.py  run_planning_results_table.py  run_scenario_robustness.py  run_traditional_ml_suite.py  run_xgboost_baseline_suite.py  train_xgboost_baseline.py
scripts/data-crawl/: README.md  california_sources.json  crawl_california_energy_prices.py  crawl_california_livestock.py  crawl_california_policy_reference.py  crawl_california_waste_emission_factors.py  crawl_california_wet_waste.py  download_official_sources.py  register_calrecycle_capacity_export.py
scripts/data-process/: 01_ingest_wet_waste_biomass_opt.py  02_ingest_manure_pyrolysis_iam.py  03_build_unified_schema.py  04_build_mixed_waste_features.py  05_build_region_placeholder_inputs.py  06_build_california_wet_waste_inputs.py  07_build_california_capacity_inputs.py  08_build_california_organics_facility_inventory.py  09_build_california_food_waste_treatment_mix.py  10_build_ml_ready_datasets.py  11_build_planning_mult_pathway_dataset.py  12_ingest_ad_literature_dataset.py  README.md
scripts/plot/: common.py  plot_ad_complementarity_tradeoff.py  plot_graphical_abstract_and_workflow.py  plot_paper1_graphical_abstract.py  plot_paper1_planning_results.py
src/waste2energy/: __init__.py  audit.py  benchmark_cli.py  benchmarking.py  cli.py  config.py  datasets.py  evidence_policy.py  highcase.py  manuscript_sync.py  metrics.py  results_quality.py  runtime.py  schema.py  train.py
tests/: conftest.py  test_ad_reference_layer.py  test_audit_logic.py  test_benchmark_cli.py  test_benchmark_smoke.py  test_catboost_registry.py  test_data_contracts.py  test_data_splits.py  test_evidence_gates.py  test_highcase.py  test_lightgbm_registry.py  test_operation_smoke.py  test_planning_ablations.py  test_planning_artifacts.py  test_planning_dataset_generation.py  test_planning_pathway_inclusion.py  test_planning_smoke.py  test_planning_units.py  test_plot_data_pipeline.py  test_plot_outputs.py  test_recommendation_confidence.py  test_results_quality.py  test_run_manifest.py  test_runtime.py  test_scenario_smoke.py  test_stacking_registry.py  test_submission_readiness.py  test_surrogate_evaluator.py  test_surrogate_evaluator_resolution.py  test_surrogate_selection.py  test_weight_system.py
waste2energy-paper/bib/: references.bib
(+235 files in other folders)
