[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waste2energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
]

[project.scripts]
waste2energy-train = "waste2energy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
