[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waste2energy"
version = "0.1.0"
description = "请输入文本"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "gymnasium>=1.2.0,<1.3.0",
    "highspy>=1.14.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pillow>=12.2.0",
    "pymoo>=0.6.1",
    "pyomo>=6.9.0",
    "python-dateutil>=2.9.0",
    "requests>=2.31.0",
    "scienceplots>=2.2.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "torch>=2.3.0,<3.0.0",
    "xgboost>=2.0.0",
]

[project.scripts]
waste2energy-train = "waste2energy.cli:main"
waste2energy-plan = "waste2energy.planning.cli:main"
waste2energy-scenario = "waste2energy.scenarios.cli:main"
waste2energy-operation = "waste2energy.operation.cli:main"
waste2energy-audit = "waste2energy.audit:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
